--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_staggered_grid_view: ^0.6.2
   formz: ^0.6.0
+  get_it: ^7.6.0
   go_router: ^8.0.3
   hive: ^2.2.3
   image_picker: ^0.8.6
