--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hive: ^2.2.3
   image_picker: ^0.8.6
   intl: ^0.18.1
+  loggy: ^2.0.3
   path_provider: ^2.0.15
   uuid: ^3.0.7
   video_player: ^2.6.1
