--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  awesome_snackbar_content: ^0.1.3
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   flutter:
@@ -39,7 +40,7 @@ dependencies:
   go_router: ^8.0.3
   hive: ^2.2.3
   image_picker: ^0.8.6
-  intl: ^0.18.1
+  intl: ^0.18.0
   loggy: ^2.0.3
   path_provider: ^2.0.15
   uuid: ^3.0.7
