--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   loggy: ^2.0.3
   path_provider: ^2.0.15
   uuid: ^3.0.7
-  video_player: ^2.4.7
+  video_player: ^2.7.0
 
 dev_dependencies:
   build_runner: ^2.4.5
@@ -66,6 +66,7 @@ flutter:
   assets:
     - assets/images/
     - assets/videos/
+    - assets/videos/compressed/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
