--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   get_it: ^7.6.0
   go_router: ^8.0.3
   hive: ^2.2.3
+  hive_flutter: ^1.1.0
   image_picker: ^0.8.6
   intl: ^0.18.0
   loggy: ^2.0.3
