--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^1.0.1
   intl: ^0.18.0
   loggy: ^2.0.3
+  path: ^1.8.3
   path_provider: ^2.0.15
   uuid: ^3.0.7
   video_player: ^2.7.0
