--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   awesome_snackbar_content: ^0.1.3
+  bubble: ^1.2.1
+  chat_bubbles: ^1.4.1
   cupertino_icons: ^1.0.2
   email_validator: ^2.1.17
   equatable: ^2.0.5
